--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -7,6 +7,13 @@
     background-attachment: fixed;
 }
 
+.blog h1 {
+    text-align: center;
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+
 .icon-container{
     display: flex;
     justify-content: end;
