--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,115 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@tailwind variants;
 
-.input{
-  @apply block w-full px-4 py-2 mt-2 text-purple-700 bg-white border rounded-md focus:border-purple-400 focus:ring-purple-300 focus:outline-none focus:ring focus:ring-opacity-40
-}
-.button{
-  @apply w-full px-4 py-2 tracking-wide text-white transition-colors duration-200 transform bg-purple-700 rounded-md hover:bg-purple-600 focus:outline-none focus:bg-purple-600
-}
-.loginWith{
-  @apply flex items-center justify-center w-full p-4 space-x-4 border rounded-md focus:ring-2 focus:ring-offset-1 dark:border-gray-400 focus:ring-violet-400
+
+/* tailwind area */
+.input {
+    @apply block w-full px-4 py-2 mt-2 text-purple-700 bg-white border rounded-md focus:border-purple-400 focus:ring-purple-300 focus:outline-none focus:ring focus:ring-opacity-40
 }
 
-.label{
-  @apply block text-sm font-medium text-gray-700 
+.button {
+    @apply w-full px-4 py-2 tracking-wide text-white transition-colors duration-200 transform bg-purple-700 rounded-md hover:bg-purple-600 focus:outline-none focus:bg-purple-600
+}
+
+.loginWith {
+    @apply flex items-center justify-center w-full p-4 space-x-4 border rounded-md focus:ring-2 focus:ring-offset-1 dark:border-gray-400 focus:ring-violet-400
+}
+
+.label {
+    @apply block text-sm font-medium text-gray-700
+}
+
+/* normal css area */
+
+:root {
+    --header-bg: rgba(255, 166, 0, 0.255);
+    --logo-color: black;
+    --na-link-color: black;
+    --btn-primary: rgba(255, 123, 0, 0.843);
+}
+
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: rgba(188, 140, 18, 0.1);
+}
+
+.container, .my-container {
+    max-width: 1150px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.section {
+    margin-top: 5rem;
+}
+
+.title-sec{
+    font-size: 2.5rem;
+    text-align: center;
+    margin-bottom: 2rem;
+    font-weight: 600;
+}
+
+.active-route {
+    border: 1px solid rgb(147, 130, 130);
+    border-radius: 7px;
+}
+
+a {
+    text-decoration: none;
+}
+
+button {
+    cursor: pointer;
+}
+
+.btn-primary {
+    color: white;
+    outline: none;
+    border: none;
+    font-weight: 700;
+    padding: 10px 24px;
+    cursor: pointer;
+    border-radius: 5px;
+    background-color: var(--btn-primary);
+}
+
+.btn-pagination{
+    background-color: rgb(165, 182, 182);
+    padding: 5px 15px;
+    border-radius: 3px;
+    margin: 0 5px;
+}
+
+.btn-pag-active{
+    background-color: rgb(138, 147, 147);
 }
 
 
+@media screen and (max-width: 767px) {
+    .section {
+        margin-top: 2.5rem;
+    }
+    
+    .title-sec{
+        font-size: 1.5rem;
+        font-weight: 600;
+        margin-bottom: 1rem;
+    }
 
-
+    .sm-d-none{
+        display: none;
+    }
+}
 
